# fnet

./: .python-version  pyproject.toml
src/: main.py
tests/: test_fnet.py
